# serpens-project

./: .gitignore  README.md  track_tf_process.sh
serpens/src/single_joint/: CMakeLists.txt  package.xml
serpens/src/single_joint/config/: generator.yaml  gzactuator.yaml  order_generator.yaml  rainbow.yaml  serpens_pitch.yaml  snake_joint_control.yaml  stiff_control.yaml
serpens/src/single_joint/include/: LadderMode.h  OrderGenerator.h  order_generator.h
serpens/src/single_joint/launch/: seavstiff_gazebo.launch  serpens_pitch.launch  simulation.launch  snake_joint_gazebo.launch  test_urdf.launch
serpens/src/single_joint/meshes/: base_link.STL  generic_yaw.STL  link 1.STL  link 2.STL
serpens/src/single_joint/scripts/: generator.py  gzactuator.py  rainbow.py  test_gazebo.py  watch2bag.py
serpens/src/single_joint/scripts/generator/: order_generator.py
serpens/src/single_joint/scripts/gzactuator/: joint_env.py  robot_gazebo_env_goal.py  task_env.py
serpens/src/single_joint/scripts/ppo/: agent.py  config.py  network.py
serpens/src/single_joint/scripts/rainbow/: README.md  agent.py  gym_env.py  network.py  noisy_linear.py  prioritized_replay_buffer.py  replay_buffer.py  segment_tree.py  (+2 more)
serpens/src/single_joint/srv/: JointOrder.srv  PositionFeedback.srv  PositionOrder.srv  PredictedMotorTorque.srv
serpens/src/single_joint/urdf/: jointbox_v1.urdf  jointbox_v1.xacro  seavstiff_world.xacro  serpens_pitch.xacro  snake_joint.gazebo  snake_joint.xacro  snake_joint_world.xacro  stiff_3_dof.gazebo  stiff_3_dof.xacro
serpens/src/single_joint/worlds/: default.world
(+44 files in other folders)
